--- a/style/home-page/style-main.css
+++ b/style/home-page/style-main.css
@@ -9,6 +9,26 @@ body {
     color: #FFFFFF;
 }
 
+.non-selectable {
+    scrollbar-width: none; /* Firefox */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
+.weather_result_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: #444;
+    padding: 20px;
+}
+
 .weather-container {
     background: #333;
     padding: 20px;
@@ -40,7 +60,7 @@ body {
 }
 
 .forecast {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .horizontal-forecast {
@@ -49,7 +69,6 @@ body {
     gap: 10px;
     padding: 10px;
     scroll-behavior: smooth;
-    scrollbar-width: none; /* Firefox */
 }
 
 .horizontal-forecast::-webkit-scrollbar {
@@ -81,27 +100,144 @@ body {
     height: 50px; /* Increased size */
 }
 
+.search_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.city_input {
+    width: 50%;
+    padding: 10px;
+    margin: 0;
+    border: 1px solid #666;
+    border-radius: 4px;
+    background: #444;
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
+.city_submit_input {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background: #c5fd39;
+    color: #000;
+    font-size: 16px;
+    cursor: pointer;
+    min-width: fit-content;
+}
+
+
+
+/*------------------------*/
+
+.switch_container {
+    width: fit-content;
+    display: flex;
+    cursor: pointer;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 170px;
+    height: 40px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border: 1px rgb(197, 253, 57) solid;
+    border-radius: 30px;
+
+}
+
+input:checked + .slider {
+    background-color: rgb(197, 253, 57);
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    top: 2px;
+    right: initial;
+    bottom: 2px;
+    left: 2px;
+    width: 72px;
+    background-color: rgb(197, 253, 57);
+    -webkit-transition: .4s;
+    border-radius: 30px;
+}
+
+input:checked + .slider:before {
+    background-color: rgba(42, 42, 42, 0.25);
+    backdrop-filter: blur(5px);
+    transform: translateX(72px);
+    width: 93px;
+}
+
+#p__celsius, #p__farhenheit {
+    font-size: 16px;
+    position: absolute;
+    top: 10px;
+    margin: 0;
+    cursor: pointer;
+}
+
+#p__celsius {
+    left: 12px;
+    color: #000;
+}
+
+#p__farhenheit {
+    right: 12px;
+    color: #fff;
+}
+
 @media (max-width: 600px) {
     .weather-container {
         width: 100%;
         padding: 10px;
     }
-    
+
     .weather-icon {
         width: 80px;
         height: 80px;
     }
-    
+
     .temp {
         font-size: 36px;
     }
-    
+
     .forecast-day, .forecast-hour {
         min-width: 200px; /* Adjusted width for smaller screens */
     }
-    
+
     .forecast-day img, .forecast-hour img {
         width: 40px; /* Adjusted size for smaller screens */
         height: 40px; /* Adjusted size for smaller screens */
+    }
+
+    .search_container {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
     }
 }
