--- a/style/home-page/style-main.css
+++ b/style/home-page/style-main.css
@@ -5,7 +5,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    margin: 0;
     color: #FFFFFF;
 }
 
@@ -37,7 +36,8 @@ body {
     text-align: center;
     max-width: 90%;
     width: 800px; /* Increased width */
-    margin: 10px;
+    margin: 100px 10px 10px;
+
 }
 
 .weather-container h1 {
